# trello-hub-sync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  WEBHOOKS.md
examples/: watchdog.sh
systemd/: trello-sync-receiver.service  trello-sync.service  trello-sync.timer
trellohub/: __init__.py  api.py  cli.py  comments.py  config.py  discover.py  engine.py  state.py  status.py  webhook.py  webhooks.py
